--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
             <i class="fas fa-info-circle"></i>
         </button>
         <h1>ToDayList</h1>
-        <h2 class="subtitle">Tu Gestor de Tareas Diarias Inteligente</h2>
+        <h2 class="subtitle">Tu Gestor de Tareas Diarias</h2>
         <p class="app-description-static">
             Organiza tu día y aumenta tu productividad de forma sencilla y eficaz.
         </p>
