--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
     <!-- Footer fuera del .container principal para que ocupe el ancho del body si es necesario, pero centrado con max-width -->
     <footer>
         <img src="https://www.todaylist.es/ToDayList.png" alt="Logo ToDayList" class="footer-logo">
-        <p class="footer-text">WebApp creada por Enrique Gil</p>
+        <p class="footer-text">WebApp creada por Henry Gil</p>
     </footer>
 
     <button id="dark-mode-toggle" class="app-button" aria-label="Alternar modo oscuro/claro"><i class="fas fa-moon"></i></button>
